--- a/Code/01-28_rcbd_partial.qmd
+++ b/Code/01-28_rcbd_partial.qmd
@@ -277,7 +277,8 @@ Remember that it is at this level that we establish the hierarchy of how our pai
 
 Let's extract it by comparing everything to everything else.
 ```{r interaction means all}
-rcbd_means_all 
+rcbd_means_all <- emmeans(rcbd_mod, ~nrate_kgha:krate_kgha)
+                  # emmeans(rcbd_mod, ~nrate_kgha | krate_kgha)
 
 rcbd_means_all
 ```
@@ -297,7 +298,10 @@ rcbd_cld_all
 Let's do some light wrangling here to be able to plot these.  
 
 ```{r selected pwc}
-rcbd_cld_selected <- rcbd_cld_all 
+rcbd_cld_selected <- rcbd_cld_all %>%
+  as.data.frame() %>%
+  mutate(letter = trimws(.group)) %>%
+  mutate(trtname = paste0(nrate_kgha, "+", krate_kgha))
 
 rcbd_cld_selected
 ```
@@ -307,9 +311,52 @@ Let's plot our results, including both **raw data** (for allowing our audience t
 Let's make this plot publication ready.  
 
 ```{r rcbd final plot}
-
+ggplot() + 
+  geom_boxplot(data = rcbd_dfw,
+               aes(x = trtname, y = yield_kgha,
+                   fill = trtname))+
+  geom_jitter(data = rcbd_dfw,
+              aes(x = trtname, y = yield_kgha,
+                  colour = trtname),
+              alpha = 0.6)+
+  geom_label(data = rcbd_cld_selected,
+            aes(x = trtname, y = emmean,
+                label = letter),
+            size = 3,
+            label.padding = unit(0.1, "lines")) +
+  labs(x = " N rate + K rate(kgha)", #برای اضافه کردن لیبل دلخواه برای محور اکس و وای اضافه شد
+       y = "Yield (kgha)") +
+  scale_fill_viridis_d() +
+  scale_color_viridis_d() +
+  theme(legend.position = "none") # برای حذف کردن لنجد استفاده شد
+ggsave("../Output/rcbd_means.png",
+       height = 4,
+       width = 6)
 ```
+K rates inside N
 
+```{r}
+ggplot() + 
+  geom_boxplot(data = rcbd_dfw,
+               aes(x = trtname, y = yield_kgha,
+                   fill = trtname))+
+  geom_jitter(data = rcbd_dfw,
+              aes(x = trtname, y = yield_kgha,
+                  colour = trtname),
+              alpha = 0.6)+
+  geom_label(data = rcbd_cld_selected,
+            aes(x = trtname, y = emmean,
+                label = letter),
+            size = 3,
+            label.padding = unit(0.1, "lines")) +
+  labs(x = " N rate + K rate(kgha)", #برای اضافه کردن لیبل دلخواه برای محور اکس و وای اضافه شد
+       y = "Yield (kgha)") +
+  scale_fill_viridis_d() +
+  scale_color_viridis_d() +
+  facet_grid(.~ntate.kgha)
+  theme(legend.position = "none") # برای حذف کردن لنجد استفاده شد
+```
+```
 
 
 
